[project]
name = "sentinelsync"
version = "0.1.0"
description = "Windows-first defensive IOC triage pipeline (CLI + API)"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.5",
  "bandit>=1.7.9",
  "pip-audit>=2.7",
  "types-requests>=2.32.0.20240712",
]

[project.scripts]
sentinelsync = "app.cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.bandit]
exclude_dirs = ["tests"]

